<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fillViewport="true"
    tools:context="com.example.bnayagrawal.myaccountui.MyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_weight="1"
            android:layout_gravity="top">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/profile_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/bobmarley"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/username"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/profile_user_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/user_intro"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_user_name" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btn_flames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_rectangle"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_flame"
                android:padding="12dp"
                android:text="@string/flames"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_invite_friends"
                app:layout_constraintTop_toBottomOf="@+id/profile_details"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <Button
                android:id="@+id/btn_invite_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/rounded_rectangle_transparent"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_add_user_white"
                android:padding="12dp"
                android:text="@string/invite_friends"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_flames"
                app:layout_constraintTop_toBottomOf="@+id/profile_details" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            app:cardBackgroundColor="#8dffffff"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_user" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_profile"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_right_arrow" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_span="3"
                        android:background="@color/dividerLight" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_gears" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/preferences"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_right_arrow" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_span="3"
                        android:background="@color/dividerLight" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_support" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/support"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="16dp"
                        android:contentDescription="@null"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_right_arrow" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
